[package]
name = "gupier"
version = "0.1.0"
authors = ["Giacomo Rizzi <gufoes@gmail.com>", "Pier Angelo Vendrame <pierangelo.vendrame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ncollide3d = "*"
nphysics3d = "*"
rand = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
rayon = "1.1"
laminar = "0.3"
crossbeam-channel = "*"
structopt = { version = "0.3", default-features = false }


[dependencies.kiss3d]
 git = "https://github.com/gufoe/kiss3d.git"
 features = ["conrod"]

[dependencies.nalgebra]
 version = "*"
 features = ["serde-serialize"]
[dependencies.bimap]
 version = "0.4"
 features = ["serde"]
